--- a/LaundryShop/index.html
+++ b/LaundryShop/index.html
@@ -30,12 +30,14 @@
                     <h6>Don Gia</h6>
                     <h6>Tong</h6>
                 </div>
+                <hr>
                 <div class="justify-content-between">
                     <p>Giac nhanh</p>
                     <p>3KG</p>
                     <p>50.000d</p>
                     <p>150.000</p>
                 </div>
+                <hr>
                 <div class="justify-content-between">
                     <h6>Tong</h6>
                     <h6>150.000d</h6>
@@ -44,11 +46,15 @@
                     <h6>VAT</h6>
                     <h6>5%</h6>
                 </div>
-                <div class="card-footer">
-                    <div class="justify-content-between">
-                        <h5>Tong Tien</h5>
-                        <h5>157.500</h5>
-                    </div>
+                <div class="justify-content-between">
+                    <h6>Voucher</h6>
+                    <h7 class="">-50.000</h7>
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="justify-content-between">
+                    <h5>Tong Tien</h5>
+                    <h5>107.500</h5>
                 </div>
             </div>
         </div>
