--- a/LaundryShop/index.html
+++ b/LaundryShop/index.html
@@ -19,131 +19,163 @@
     <!--content-->
     <div class="main-content">
         <!--checkout-->
-        <div class="card-border">
-            <div class="card-header bg-info ">
-                <h2 id="checkout">Checkout</h2>
+        <div class="content">
+            <div class="card-border">
+                <div class="card-header ">
+                    <h2 id="checkout">BILL</h2>
+                    <hr color="black">
+                </div>
+                <div class="card-body">
+                    <div class="head-service">
+                        <h6>Dich vu</h6>
+                        <h6>SL</h6>
+                        <h6>Don Gia</h6>
+                        <h6>Tong</h6>
+                    </div>
+                    <hr color=black>
+                    <div class="justify-content-between">
+                        <p>Giac nhanh</p>
+                        <p>3KG</p>
+                        <p>50.000d</p>
+                        <p>150.000</p>
+                    </div>
+                    <hr color="black">
+                    <div class="justify-content-between">
+                        <h6>Tong</h6>
+                        <h6>150.000d</h6>
+                    </div>
+                    <div class="justify-content-between">
+                        <h6>VAT</h6>
+                        <h6>5%</h6>
+                    </div>
+                    <div class="justify-content-between">
+                        <h6>Voucher</h6>
+                        <h7 class="">-50.000</h7>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <hr color="black">
+                    <div class="justify-content-between">
+                        <h5>Tong Tien</h5>
+                        <h5>107.500</h5>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-                <div class="head-service">
-                    <h6>Dich vu</h6>
-                    <h6>SL</h6>
-                    <h6>Don Gia</h6>
-                    <h6>Tong</h6>
+            <div class="card-border">
+                <div class="card-header ">
+                    <h5 id="checkout">Hinh Thuc Thanh Toan</h5>
+                    <hr color="black">
                 </div>
-                <hr>
-                <div class="justify-content-between">
-                    <p>Giac nhanh</p>
-                    <p>3KG</p>
-                    <p>50.000d</p>
-                    <p>150.000</p>
+                <div class="card-body">
+                    <div class="form-choose">
+                        <button class="choose" id="btn-open-qr">QRCode</button>
+                    </div>
+                    <div class="form-choose">
+                        <button class="choose" id="btn_open_credit">The Credit</button>
+                    </div>
+                    <div class="form-choose">
+                        <button class="choose" id="btn-open-pay">Tiền Mặt</button>
+                    </div>
                 </div>
-                <hr>
-                <div class="justify-content-between">
-                    <h6>Tong</h6>
-                    <h6>150.000d</h6>
+                <div class="card-footer">
+                    <hr color="black">
+                    <button class="choose" id="btn-order">Xuat Hoa
+                        Don</button>
                 </div>
-                <div class="justify-content-between">
-                    <h6>VAT</h6>
-                    <h6>5%</h6>
+            </div>
+        </div>
+        <!--End checkout-->
+
+
+    </div>
+    <!--modal Credit-->
+
+    <div id="modal-container-credit">
+        <div id="modal">
+            <div class="modal-header">
+                <h3>The Credit</h3>
+                <button id="btn_close_credit" class="bg-info"><i class="fa-solid fa-xmark "></i></button>
+            </div>
+            <div class="modal-body">
+                <form class="modal-payment">
+                    <label for="text">Ho va Ten chu the</label>
+                    <br>
+                    <input type="text" id="name" placeholder="Nhap ho va ten chu the">
+                </form>
+                <form class="modal-payment">
+                    <label for="text">So the</label><br>
+                    <input type="text" id="number" placeholder="sothe">
+                </form>
+                <form class="">
+                    <label for="text">CCV</label><br>
+                    <input type="text" id="CCV" placeholder="CCV">
+                </form>
+                <form class="modal-payment">
+                    <label for="text">Ngay Het Han</label><br>
+                    <input type="month" id="datecredit" placeholder="Ngay Het Han">
+                </form>
+                <img src="/img/atm.png" class="img-atm">
+                <div class="card-footer-payment">
+                    <button class="btn btn-lg btn-block btn-info font-weight-bold my-3 py-3" id="btn-payment">Thanh
+                        Toan</button>
                 </div>
-                <div class="justify-content-between">
-                    <h6>Voucher</h6>
-                    <h7 class="">-50.000</h7>
-                </div>
+            </div>
+        </div>
+    </div>
+    <!--end modal Credit-->
+    <!--modal QR-->
+    <div id="modal-container-qr">
+        <div id="modal">
+            <div class="modal-header">
+                <h3>QRcode</h3>
+                <button id="btn-close-qr" class="bg-info"><i class="fa-solid fa-xmark "></i></button>
+            </div>
+            <div class="modal-body">
+               <img src="/img/qrcode.png" class="img-qr">
             </div>
             <div class="card-footer">
-                <div class="justify-content-between">
-                    <h5>Tong Tien</h5>
-                    <h5>107.500</h5>
-                </div>
+                <hr color="black">
+                <button class="XacNhan" id="btn-order-accept">Xac Nhan Thanh Toan</button>
             </div>
         </div>
-        <div class="card-border">
-            <div class="card-header bg-info ">
-                <h5 id="checkout">Hinh Thuc Thanh Toan</h5>
-            </div>
-            <div class="card-body">
-                <div class="form-group">
-                    <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" name="payment" id="qrcode">
-                        <label class="custom-control-label" for="qrcode">QRcode</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" name="payment" id="credit">
-                        <label class="custom-control-label" for="credit">The Credit</label>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" name="payment" id="cash">
-                        <label class="custom-control-label" for="cash">Thanh toán bằng tiên mặt</label>
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer">
-                <button class="btn btn-lg btn-block btn-info font-weight-bold my-3 py-3" id="btn_open">Thanh
-                    Toan</button>
-            </div>
-            <!--End checkout-->
-
-        </div>
-        <!--content 2-->
-        <!--content 2-->
-        <!--modal-->
-
-        <div id="modal-container">
-            <div id="modal">
-                <div class="modal-header">
-                    <h3>The Credit</h3>
-                    <button id="btn_close" class="bg-info"><i class="fa-solid fa-xmark "></i></button>
-                </div>
-                <div class="modal-body">
-                    <form class="modal-payment">
-                        <label for="text">Ho va Ten chu the</label>
-                        <br>
-                        <input type="text" id="name" placeholder="Nhap ho va ten chu the">  
-                    </form>
-                    <form class="modal-payment">
-                        <label for="text">So the</label><br>
-                        <input type="text" id="number" placeholder="sothe">
-                    </form>
-                    <form class="">
-                        <label for="text">CCV</label><br>
-                        <input type="text" id="CCV" placeholder="CCV">
-                    </form>
-                    <form class="modal-payment">
-                        <label for="text">Ngay Het Han</label><br>
-                        <input type="month" id="datecredit" placeholder="Ngay Het Han">
-                    </form>
-                    <img src="/img/atm.png" class="img-atm">
-                    <div class="card-footer-payment">
-                        <button class="btn btn-lg btn-block btn-info font-weight-bold my-3 py-3" id="btn-payment">Thanh
-                            Toan</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--end modal-->
-        <!--modal 2-->
-        <!--endmodal2-->
+    </div>
+    <!--endmodal QR-->
     </div>
     </div>
     <!--End content-->
     <!--footer-->
+    <div class="footer-bg">
+        <h6>This is footer</h6>
+    </div>
     <!--end footer-->
-    <script>
-        const btn_open = document.getElementById('btn_open');
-        const btn_close = document.getElementById('btn_close');
-        const modal_container = document.getElementById('modal-container')
-        btn_open.addEventListener('click', () => {
-            modal_container.classList.add('show');
+    <!--JVS-->
+    <!--action modal credit-->
+    <script> 
+        const btn_open_credit = document.getElementById('btn_open_credit');
+        const btn_close_credit = document.getElementById('btn_close_credit');
+        const modal_container_credit = document.getElementById('modal-container-credit')
+        btn_open_credit.addEventListener('click', () => {
+            modal_container_credit.classList.add('show');
         });
-        btn_close.addEventListener('click', () => {
-            modal_container.classList.remove('show');
+        btn_close_credit.addEventListener('click', () => {
+            modal_container_credit.classList.remove('show');
         });
     </script>
+    <!--end action modal credit-->
+    <!--action modal QR-->
+    <script>
+        const btn_open_qr = document.getElementById('btn-open-qr');
+        const btn_close_qr = document.getElementById('btn-close-qr');
+        const modal_container_qr = document.getElementById('modal-container-qr');
+        btn_open_qr.addEventListener('click',()=>{
+            modal_container_qr.classList.add('show');
+        })
+        btn_close_qr.addEventListener('click',()=>{
+            modal_container_qr.classList.remove('show');
+        })
+    </script>
+    <!--End Action modal QR-->
+    <!--End JVS-->
 </body>
 
 </html>
