--- a/LaundryShop/src/main/resources/static/2index.html
+++ b/LaundryShop/src/main/resources/static/2index.html
@@ -1111,7 +1111,7 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS Animation JS -->
